--- a/presentations/cakefest-2021.html
+++ b/presentations/cakefest-2021.html
@@ -122,6 +122,9 @@
                 How does your <span class="cakephp">CAKE</span> test?
             </h3>
             <p class="small">by Juan Pablo Ramirez</p>
+            <aside class="notes">
+                Welcome to my presentation on how the Cake tastes a Passbolt.
+            </aside>
         </section>
         <section>
             <section>
@@ -246,11 +249,11 @@
                 <p>Meet us on the <a href="https://community.passbolt.com/" target="_blank">Passbolt Community Forum</a></p>
             </section>
             <section>
-                <p>Check Remy's <a href="https://www.youtube.com/watch?v=xv6paiNn-_8" target="_blank">last year keynote</a></p>
+                <p>Check Remy's <a href="https://www.youtube.com/watch?v=xv6paiNn-_8" target="_blank">Cakefest 2020 keynote</a></p>
             </section>
         </section>
         <section>
-            <h4>Last year</h4>
+            <h4>This year</h4>
             <table><tbody class="large-margins">
                 <tr>
                     <td class="fragment">
@@ -291,6 +294,10 @@
                 <p>
                     <img src="./assets/cakefest21/locale_login.png">
                 </p>
+                <aside class="notes">
+                    A little word on the translations. We now cover french, and the coming v3.3 version
+                    will feature Swedish and German. This is open to contributions.
+                </aside>
             </section>
             <section>
                 <p>
@@ -299,15 +306,20 @@
                     </a>
                 </p>
                 <aside class="notes">
-                    A little word on the translations
+                    Translations are made with the Crowdin application. Let's click this.
+                    You can see the locales being now translated. You are free to contribute,
+                    your bored uncle too. You can add new locales and you can bet on who will be
+                    done first between chinese and polish!
                 </aside>
             </section>
         </section>
         <section data-background="http://i.giphy.com/7FrOU9tPbgAZtxV5mb.gif" data-background-interactive>
             <p class="white-shadowed">Enter the code...</p>
+            <aside class="notes">
+                Let's now have some Cake...
+            </aside>
         </section>
         <section>
-
             <section data-background="./assets/cakefest21/architecture.png">
                 <h1 class="white-shadowed">
                     Architecture overview
@@ -319,7 +331,8 @@
                     The business logic is placed in services.
                     Middlewares are useful.
                     Plugins are essentials.
-                    Schema is handled with migrations. Around 24 tables;
+                    Schema is handled with migrations. Around 24 tables in the community
+                    edition, which is not huge.
                 </aside>
             </section>
         </section>
@@ -334,6 +347,7 @@
             <section data-background-color="#272A2A">
                 <span style="display: inline-block">Translate emails subject</span>
                 <span class="mini">testLocaleServiceLocaleTranslateString_With_French_Org_Setting</span>
+                <a href="https://github.com/lorenzo/cakephp-email-queue" target="_blank"><br>EmailQueue</a>
                 <img src="assets/cakefest21/test_locale.png">
             </section>
             <section data-background-color="#272A2A">
@@ -375,7 +389,7 @@
         <section data-background-transition="zoom">
             <section data-background="https://ds1.static.rtbf.be/article/image/1240x800/9/1/2/c0ac51fcb4b4f641803655c0bfd640e2-1527689087.jpg">
                 <h2 class="white-shadowed" style="margin-top: 400px"><a href="https://github.com/vierge-noire" target="_blank">Vierge noire</a></h2>
-                <p class="small">Juan Pablo Ramirez + Nicolas Masson</p>
+                <p class="small white-shadowed">Juan Pablo Ramirez + Nicolas Masson</p>
             </section>
             <section data-background-color="#272A2A">
             <!--                <p style="background-color: white; padding: 100px">-->
@@ -404,7 +418,7 @@
                 <img src="assets/cakefest21/test_tsl.png">
             </section>
             <section data-background-color="#272A2A">
-                <h1 class="white-shadowed">Let's go bigger!</h1>
+                <h3 class="white-shadowed">Let's go <span style="font-size: 5em">bigger</span></h3>
                 <a href="https://github.com/vierge-noire/test-database-cleaner" target="_blank">Test Database Cleaner</a>
                 <aside class="notes">
                     Der Tatort reiniger.
@@ -429,12 +443,14 @@
             </section>
         </section>
         <section data-background="http://i.giphy.com/7FrOU9tPbgAZtxV5mb.gif" data-background-interactive>
-            <p class="white-shadowed">...exit the code;</p>
+            <p class="white-shadowed">...exit the code</p>
         </section>
         <section>
             <p><a href="https://passbolt.com" target="_blank"><img style="height: 40px; margin: 40px 0" src="assets/passbolt.png"></a></p>
             <p class="fragment"><a href="https://github.com/passbolt/passbolt_api" target="_blank">Passbolt API</a></p>
-            <p class="fragment"><a href="https://community.passbolt.com/" target="_blank">Passbolt Community Forum</a></p>
+            <p class="fragment"><a href="https://community.passbolt.com/" target="_blank">Community Forum</a></p>
+            <p class="fragment"><a href="https://passbolt.crowdin.com/passbolt" target="_blank">Translation</a></p>
+            <p class="fragment"><a href="https://github.com/vierge-noire/cakephp-test-suite-light/" target="_blank">Test Suite Light</a></p>
             <p class="fragment"><a href="https://github.com/vierge-noire/cakephp-fixture-factories/" target="_blank">Fixture Factories</a></p>
             <h2 class="fragment">Thank you <span class="cakephp">Bakers</span>!</h2>
             <aside class="notes">
