--- a/presentations/cakefest-2021.html
+++ b/presentations/cakefest-2021.html
@@ -387,17 +387,20 @@
             </section>
         </section>
         <section data-background-transition="zoom">
-            <section data-background="https://ds1.static.rtbf.be/article/image/1240x800/9/1/2/c0ac51fcb4b4f641803655c0bfd640e2-1527689087.jpg">
+            <section data-background-color="#272A2A">
                 <h2 class="white-shadowed" style="margin-top: 400px"><a href="https://github.com/vierge-noire" target="_blank">Vierge noire</a></h2>
                 <p class="small white-shadowed">Juan Pablo Ramirez + Nicolas Masson</p>
             </section>
             <section data-background-color="#272A2A">
-            <!--                <p style="background-color: white; padding: 100px">-->
-                    <p style="text-decoration: line-through"><a href="https://github.com/vierge-noire/cakephp-test-migrator" target="_blank">CakePHP Migrator < 4.3</a><br>
-                    <p><a class="fragment" href="https://book.cakephp.org/4.next/en/development/testing.html#creating-test-database-schema" target="_blank">CakePHP Migrations > 4.3</a></p>
-                    <p><a class="fragment" href="https://github.com/vierge-noire/cakephp-test-suite-light" target="_blank">CakePHP Test Suite Light</a></p>
-                    <p><a class="fragment" href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank">CakePHP Fixture Factories</a></p>
-<!--                </p>-->
+                <p><a href="https://github.com/vierge-noire/cakephp-test-migrator" target="_blank">CakePHP Migrator < 4.3</a><br>
+                <p><a class="fragment" href="https://book.cakephp.org/4.next/en/development/testing.html#creating-test-database-schema" target="_blank">CakePHP Migrations > 4.3</a></p>
+                <p><a class="fragment" href="https://github.com/vierge-noire/cakephp-test-suite-light" target="_blank">CakePHP Test Suite Light</a></p>
+                <p><a class="fragment" href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank">CakePHP Fixture Factories</a></p>
+                <p><a class="fragment" href="https://github.com/vierge-noire/cakephp-behat-suite" target="_blank">CakePHP Behat Suite</a></p>
+                <aside class="notes">
+                    At Vierge Noire we have developed a few packages to ease the life of the test driven Bakers.
+
+                </aside>
             </section>
             <section data-background-iframe="https://book.cakephp.org/4.next/en/development/testing.html#creating-test-database-schema" data-background-interactive>
                 <div style="position: absolute; width: 200px; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(211, 60, 68, 0.7); padding: 20px; font-size: 20px; text-align: center;">
@@ -421,7 +424,7 @@
                 <h3 class="white-shadowed">Let's go <span style="font-size: 5em">bigger</span></h3>
                 <a href="https://github.com/vierge-noire/test-database-cleaner" target="_blank">Test Database Cleaner</a>
                 <aside class="notes">
-                    Der Tatort reiniger.
+                    Der Tatort reiniger. This package will help manage the test DB in a Framework agnostic manner.
                 </aside>
             </section>
         </section>
@@ -429,7 +432,11 @@
             <section data-background="./assets/cakefest21/test_ff.png">
                 <h1 class="white-shadowed">Fixture Factories</h1>
                 <aside class="notes">
-
+                    You've heard of the fixture factories since last year. The concept is not new, this
+                    is the approach taken by Laravel and Symfony, and there are many good reasons for that.
+                    The difference with the CakePHP feature factories and the other framework approach
+                    lies in the powerful ORM and Event system.
+                    Here I will show you a little feature of the factories.
                 </aside>
             </section>
             <section data-background-color="#272A2A">
