--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						<li>
 							<a href="" class="icon fa-angle-down">Projects</a>
 							<ul>
-								<li><a href="#cakephp-fixtures">CakePHP Fixture Factories</a></li>
-								<li><a href="#test-database-cleaner">Universal Test DB Cleaner</a></li>
-								<li><a href="#test-migrator">Test Migrator</a></li>
+								<li><a target="_blank" href="https://github.com/vierge-noire/cakephp-fixture-factories">CakePHP Fixture Factories</a></li>
+								<li><a target="_blank" href="https://github.com/vierge-noire/test-database-cleaner">Universal Test DB Cleaner</a></li>
+								<li><a target="_blank" href="https://github.com/vierge-noire/cakephp-test-migrator">CakePHP Test Migrator</a></li>
 							</ul>
 						</li>
 						<li>
@@ -67,21 +67,18 @@
 			<section id="one" class="wrapper style1">
 				<div class="container">
 					<header class="major">
-						<h2>Development</h2>
-						<p>Vierge Noire proposes development tools in PHP<br />
-							To facilitate the work of our fellow developers. <br />
-							We strongly believe in Test Driven Development <br />
-							And long lasting achievements.
+						<p><b>Vierge Noire</b> proposes development tools in PHP that facilitate the work of our fellow developers. <br />
+							We strongly believe in <b>Test Driven Development</b>, and long lasting achievements.
 					</header>
 					<div class="box alt">
 						<img class="image center" src="images/MontSaintMichel.jpg" alt="" />
 					</div>
 
-					<h4>Manifest</h4>
+					<h3>Manifest</h3>
 					<p>
 						<span class="image left"><img src="images/GrandPlace.jpg" alt="" /></span>
-						Vierge noire is inspired from the works of ancient knowledge. From all time, men gathered
-						together with the intention to serve a sustainable society through their achievements.
+						Vierge noire searches inspiration within the works of ancient knowledge. From all time, men gathered
+						together and shared their knowledge with the intention to serve a sustainable society through their achievements.
 						Ingenious creators built bridges and buildings that served and inspired both the material and
 						subtle aspects of life.
 					</p>
@@ -89,7 +86,6 @@
 						<span class="image right"><img src="images/Chartres.jpg" alt="" /></span>
 						Without pretending to belong to any of these schools of the ancient times, developers
 						at Vierge Noire share an interest in messages left in the past for future generations.
-
 					</p>
 				</div>
 			</section>
@@ -98,112 +94,37 @@
 			<section id="two" class="wrapper style2">
 				<div class="container">
 					<div class="row uniform">
-						<div class="4u 6u(2) 12u$(3)">
-							<section class="feature fa-github">
-								<h3 id="cakephp-fixtures">CakePHP Fixture Factories</h3>
-								<p>
-									An alternative approach of managing test fixtures in a CakePHP application.
-									The main idea is to provide fixture factories in replacement to the fixtures you can find out of the box in CakePHP.
-								</p>
-								<ul class="actions">
-									<li><a href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank" class="button small scrolly">More</a></li>
-								</ul>
-							</section>
-						</div>
-						<div class="4u 6u(2) 12u$(3)">
-							<section class="feature fa-github">
-								<h3 id="test-database-cleaner">Test database cleaner</h3>
-								<p>
-									A framework agnostic package to clean dirty tables between each test in a PHPUnit test suite.
-								</p>
-								<ul class="actions">
-									<li><a href="https://github.com/vierge-noire/test-database-cleaner" target="_blank" class="button small scrolly">More</a></li>
-								</ul>
-							</section>
-						</div>
+<!--						<div class="4u 6u(2) 12u$(3)">-->
+<!--							<section class="feature fa-github">-->
+<!--								<h3 id="cakephp-fixtures">CakePHP Fixture Factories</h3>-->
+<!--								<p>-->
+<!--									An alternative approach of managing test fixtures in a CakePHP application.-->
+<!--									The main idea is to provide fixture factories in replacement to the fixtures you can find out of the box in CakePHP.-->
+<!--								</p>-->
+<!--								<ul class="actions">-->
+<!--									<li><a href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank" class="button small scrolly">More</a></li>-->
+<!--								</ul>-->
+<!--							</section>-->
+<!--						</div>-->
+<!--						<div class="4u 6u(2) 12u$(3)">-->
+<!--							<section class="feature fa-github">-->
+<!--								<h3 id="test-database-cleaner">Test database cleaner</h3>-->
+<!--								<p>-->
+<!--									A framework agnostic package to clean dirty tables between each test in a PHPUnit test suite.-->
+<!--								</p>-->
+<!--								<ul class="actions">-->
+<!--									<li><a href="https://github.com/vierge-noire/test-database-cleaner" target="_blank" class="button small scrolly">More</a></li>-->
+<!--								</ul>-->
+<!--							</section>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</section>
-
-		<!-- Three -->
-<!--			<section id="three" class="wrapper style1">-->
-<!--				<div class="container">-->
-<!--					<header class="major">-->
-<!--						<h2>Amet nisl consequat</h2>-->
-<!--						<p>Ipsum dolor tempus commodo turpis adipiscing adipiscing in tempor placerat<br />-->
-<!--						sed amet accumsan enim lorem sem turpis ut. Massa amet erat accumsan curae<br />-->
-<!--						blandit porttitor faucibus in nisl nisi volutpat massa mi non nascetur.</p>-->
-<!--					</header>-->
-<!--					<div class="row">-->
-<!--						<div class="4u 6u(2) 12u$(3)">-->
-<!--							<article class="box post">-->
-<!--								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>-->
-<!--								<h3>Sed amet lorem</h3>-->
-<!--								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>-->
-<!--								<ul class="actions">-->
-<!--									<li><a href="#" class="button">Learn More</a></li>-->
-<!--								</ul>-->
-<!--							</article>-->
-<!--						</div>-->
-<!--						<div class="4u 6u$(2) 12u$(3)">-->
-<!--							<article class="box post">-->
-<!--								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>-->
-<!--								<h3>Massa accumsan</h3>-->
-<!--								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>-->
-<!--								<ul class="actions">-->
-<!--									<li><a href="#" class="button">Learn More</a></li>-->
-<!--								</ul>-->
-<!--							</article>-->
-<!--						</div>-->
-<!--						<div class="4u$ 6u(2) 12u$(3)">-->
-<!--							<article class="box post">-->
-<!--								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>-->
-<!--								<h3>Faucibus portitor</h3>-->
-<!--								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>-->
-<!--								<ul class="actions">-->
-<!--									<li><a href="#" class="button">Learn More</a></li>-->
-<!--								</ul>-->
-<!--							</article>-->
-<!--						</div>-->
-<!--						<div class="4u 6u$(2) 12u$(3)">-->
-<!--							<article class="box post">-->
-<!--								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>-->
-<!--								<h3>Non placerat</h3>-->
-<!--								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>-->
-<!--								<ul class="actions">-->
-<!--									<li><a href="#" class="button">Learn More</a></li>-->
-<!--								</ul>-->
-<!--							</article>-->
-<!--						</div>-->
-<!--						<div class="4u 6u(2) 12u$(3)">-->
-<!--							<article class="box post">-->
-<!--								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>-->
-<!--								<h3>Adipiscing dolor</h3>-->
-<!--								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>-->
-<!--								<ul class="actions">-->
-<!--									<li><a href="#" class="button">Learn More</a></li>-->
-<!--								</ul>-->
-<!--							</article>-->
-<!--						</div>-->
-<!--						<div class="4u$ 6u$(2) 12u$(3)">-->
-<!--							<article class="box post">-->
-<!--								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>-->
-<!--								<h3>Feugiat tempus</h3>-->
-<!--								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>-->
-<!--								<ul class="actions">-->
-<!--									<li><a href="#" class="button">Learn More</a></li>-->
-<!--								</ul>-->
-<!--							</article>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</section>-->
-
-		<!-- CTA -->
 			<section id="cta" class="wrapper style3">
-				<h2>Would you like to join or hire us?</h2>
+				<h3>Would you like to join?</h3>
+				<br>
 				<ul class="actions">
-					<li><a href="mailto:'vierge.noire.info@gmail.com'" class="button big">Contact us!</a></li>
+					<li><a href="mailto:'vierge.noire.info@gmail.com'" class="button big">Contact</a></li>
 				</ul>
 			</section>
 
