--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 								<li><a href="presentations/cakefest-2021.html" target="_blank">Cake Fest 2021</a></li>
 								<li><a href="presentations/php-conference-2020.html" target="_blank">IPC 2020</a></li>
 								<li><a href="presentations/php-benelux-2021.html" target="_blank">PHPBenelux 2021</a></li>
+								<li><a href="presentations/php-berlin-2022.html" target="_blank">PHP User Group Berlin 2022</a></li>
 							</ul>
 						</li>
 					</ul>
