Edits PHP User Group Berlin 2022

--- a/presentations/php-berlin-2022.html
+++ b/presentations/php-berlin-2022.html
@@ -669,10 +669,17 @@
                 Conclusion
             </h4>
             <p class="fragment">
-                Grow solid with the CakePHP Fixture Factories
+                Grow solid with the CakePHP Fixture Factories<br>
+                <small>
+                    <a href="https://github.com/vierge-noire/cakephp-fixture-factories" target="_blank">vierge-noire/cakephp-fixture-factories</a>
+                </small>
             </p>
             <p class="fragment">
-                Join us to improve trigger-based database cleaner
+                Join us to extend the trigger-based database cleaner
+                <br>
+                <small>
+                    <a href="https://github.com/vierge-noire/test-database-cleaner" target="_blank">vierge-noire/test-database-cleaner</a>
+                </small>
             </p>
             <p class="fragment">
                 <small>Credits: Juan Pablo Ramirez - Nicolas Masson</small>
