--- a/presentations/cakefest-2023.html
+++ b/presentations/cakefest-2023.html
@@ -345,6 +345,9 @@
                 <img src="assets/cakefest23/default_setup_start_service.png" height="200px">
                 <img src="assets/cakefest23/ee_setup_start_service.png" height="300px">
             </section>
+            <section data-background-color="#272A2A">
+                <img src="assets/cakefest23/setup_json.png" height="100%">
+            </section>
         </section>
 
         <section data-background="http://i.giphy.com/7FrOU9tPbgAZtxV5mb.gif" data-background-interactive>
