--- a/presentations/cakefest-2023.html
+++ b/presentations/cakefest-2023.html
@@ -197,6 +197,9 @@
                 <p>
                     Account recovery policy <br><small>if enabled</small>
                 </p>
+                <p>
+                    <a href="https://cloud-staging.passbolt.in/uat-430/setup/start/86824dd9-80d2-4f93-b40b-5c5cf099cacc/aea6e288-7d4f-4cb3-b0b1-c527059d377a" target="_blank">Setup user</a>
+                </p>
                 <aside class="notes">
                     Three features in one single endpoint.
                     When users setup their account, additional information
